# new_network

./: Makefile  docker-compose.yml  openapi-schema.yml  pyproject.toml  readme.md  urls_test.py
src/apps/network/: admin.py  models.py  serializers.py  views.py
src/config/: settings.py  urls.py
